# bot_api_v3

./: .env.example  .gitignore  README.md  pyproject.toml
.trae/documents/: php-to-python-migration-plan.md
alembic/: env.py
app/: config.py  database.py  dependencies.py  exceptions.py  main.py
app/models/: __init__.py  auth.py  baidu.py  cave.py  invitation.py  item.py  minecraft.py  moauth.py  prize.py  rss.py  statistics.py  user.py
app/routers/: assistant.py  baidu.py  bangumi.py  btsoft.py  cave.py  doujinshi.py  email.py  invitation.py  minecraft.py  moauth.py  myuz.py  osu.py  prize.py  rss.py  statistics.py  storm.py  user.py
app/schemas/: assistant.py  cave.py  common.py  email.py  invitation.py  minecraft.py  moauth.py  prize.py  rss.py  statistics.py  user.py
app/services/: assistant_service.py  btsoft_service.py  cave_service.py  email_service.py  invitation_service.py  minecraft_service.py  moauth_service.py  osu_service.py  prize_service.py  rss_service.py  statistics_service.py  storm_service.py  user_service.py
app/utils/: http.py  image.py  security.py
